[package]
name = "chronicle_memory"
version = "0.1.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]

[dependencies]
chashmap = "2.1.0"
chronicle = { version = "0.1.0", path = "../chronicle" }
futures = "0.1.10"
uuid = { version = "0.4.0", features = ["serde", "v4"] }

[dev-dependencies]
lazy_static = "0.2.4"
