[package]
name = "bank_example"
version = "0.1.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
publish = false

[dependencies]
chronicle_domain = { version = "0.1.0", path = "../../chronicle_domain" }
chronicle_memory = { version = "0.1.0", path = "../../chronicle_memory" }
futures = "0.1.10"
rocket = "0.2.0"
rocket_codegen = "0.2.0"
rocket_contrib = { version = "0.2.0", default-features = false, features = ["json", "uuid"] }
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"
uuid = { version = "0.4.0", features = ["serde", "v4"] }
