[package]
name = "todo_list_example"
version = "0.1.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
publish = false

[dependencies]
chronicle_commander = { version = "0.1.0", path = "../../chronicle_commander" }
chronicle_memory = { version = "0.1.0", path = "../../chronicle_memory" }
futures = "0.1.9"
rocket = "0.2.0"
rocket_codegen = "0.2.0"
rocket_contrib = "0.2.0"
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"
